bk_ida/gccida/c2/eliminate_regs_in_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3397:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3397:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3399:4: error: expected ';' after expression
rtx v21; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3399:5: error: use of undeclared identifier 'v21'
rtx v21; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3406:4: error: expected ';' after expression
rtx v28; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3406:5: error: use of undeclared identifier 'v28'
rtx v28; // r8 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3441:4: error: expected ';' after expression
rtx v64; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3441:5: error: use of undeclared identifier 'v64'
rtx v64; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3442:6: error: use of undeclared identifier 'p_to_rtx'
rtx *p_to_rtx; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3443:4: error: expected ';' after expression
rtx v66; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3443:5: error: use of undeclared identifier 'v66'
rtx v66; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3445:6: error: use of undeclared identifier 'fld'
rtx *fld; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3447:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3447:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3448:4: error: expected ';' after expression
rtx v71; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3448:5: error: use of undeclared identifier 'v71'
rtx v71; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3452:6: error: use of undeclared identifier 'v75'
rtx *v75; // r15 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3453:6: error: use of undeclared identifier 'v76'
rtx *v76; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/reload1.c:3464:6: error: use of undeclared identifier 'v88'
rtx *v88; // [rsp+10h] [rbp-248h] 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eliminate_regs_in_insn/src/obj/reload1.o] Error 1
